# VariousMLTforOCR

./: .gitignore  CMakeLists.txt  README.md  find_python_module.cmake  requirements.txt
app_data/nn_models/: cnn_model_for_chars74k.h5  cnn_model_for_my_dataset.h5  cnn_model_for_my_dataset1.h5  cnn_model_for_my_dataset2.h5  cnn_model_for_my_dataset4.h5  cnn_model_for_my_dataset5.h5
gui/: CMakeLists.txt  MainWindow.ui  design.py  main.py
src/: CMakeLists.txt  CNN.py  DatasetReader.py  MLP.py  MyGUI.py  NNinterface.py  NearestNeighbor.py  TextExtractor.py  cnn.py  cnn_different.py  design.py  knn.py  main.py  mlp.py  nn.py  opencv.py  qtApp.py  read.py  readChars74K.py  readMNIST.py  runGUI.py  textExtractor.py
testing/: CMakeLists.txt  textExtractor_test.py
uml/: CMakeLists.txt  action_dataset_reader.plantuml  action_gui.plantuml  action_text_extrac.plantuml  class_diagram.plantuml  file_structure.dot  userUseCase.plantuml
utils/: CMakeLists.txt  create_my_dataset.py  create_test_image.py
